// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoRows doesn't render it there are rows 1`] = `null`;

exports[`NoRows renders a loading message 1`] = `
<div
  className="alert alert-info text-center"
>
  Loading...
</div>
`;

exports[`NoRows renders an error message 1`] = `
<div
  className="alert alert-danger text-center"
>
  Too bad!
</div>
`;

exports[`NoRows renders correctly 1`] = `
<div
  className="alert alert-warning text-center"
>
  No items to show
</div>
`;

exports[`NoRows renders correctly a custom message 1`] = `
<div
  className="alert alert-warning text-center"
>
  No items to show! Check back later!
</div>
`;
